Remove ArtifactResolverFactory and HybridArtifactResolver. Now Resolver uses only RepositoryArtifactResolver and MappedFlattenedArtifactResolver is used only in Installer; Move UI entry creation from java to configs; logback: add JUL extensions to logback.groovy; Bring back berkeley-db to platform

--- a/configs/blitz/configs/start-blitz.config
+++ b/configs/blitz/configs/start-blitz.config
@@ -6,7 +6,6 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 
 // Starts up Blitz in non-activatable mode with an embedded httpd to save
@@ -19,22 +18,31 @@ com.sun.jini.start {
     ps = System.getProperty("path.separator");
 
     serviceDescriptors = new ServiceDescriptor[] {
-
-          new SorcerServiceDescriptor(
- 			"" + Resolver.resolveRelative("org.dancres.blitz:blitz-dl") +
- 			" " + Resolver.resolveRelative("org.dancres.blitz:blitzui"),
+   		// Blitz
+        new SorcerServiceDescriptor(
+            Booter.resolveCodebase(new String[]{
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-proxy",
+                "net.jini.lookup:jmx-lookup:2.1",
+                "org.apache.river:outrigger-dl",
+ 			    "org.sorcersoft.blitz:blitz-ui"
+            }),
             policy,
-            ConfigUtil.concat(new Object[] {
-            	Resolver.resolveAbsolute("org.dancres.blitz:blitz"), ps,
-            	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-            	Resolver.resolveAbsolute("com.sleepycat:je:4.1.21"), ps,
-            	Resolver.resolveAbsolute("net.jini.lookup:serviceui"), ps,
-            	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
-            	Resolver.resolveAbsolute("net.jini:jsk-platform")
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.blitz:blitz-common",
+                "org.sorcersoft.blitz:blitz-service",
+                "org.sorcersoft.blitz:blitz-proxy",
+            	"org.sorcersoft.blitz:blitz-ui",
+            	"org.apache.river:outrigger-dl",
+            	"com.sleepycat:je",
+                "net.jini.lookup:jmx-lookup:2.1",
+            	"net.jini.lookup:serviceui",
+            	"net.jini:jsk-lib",
+            	"net.jini:jsk-platform"
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
-          	new String[] { home + "${/}configs${/}blitz${/}configs${/}blitz.config" })
-
+          	home + "/configs/blitz/configs/blitz.config"
+        )
     };         
          
 }
