--- a/configs/blitz/configs/start-lockmgr.config
+++ b/configs/blitz/configs/start-lockmgr.config
@@ -6,7 +6,6 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 
 // Starts up Blitz in non-activatable mode with an embedded httpd to save
@@ -16,23 +15,20 @@ com.sun.jini.start {
 
     home = "${sorcer.home}";
     policy = "${java.security.policy}";
-    ps = System.getProperty("path.separator");
 
     serviceDescriptors = new ServiceDescriptor[] {
-
-            new SorcerServiceDescriptor(
-            "" + Resolver.resolveRelative("org.sorcersoft.sorcer:locker"),
+		new SorcerServiceDescriptor(
+            Booter.resolveCodebase("org.sorcersoft.sorcer:locker"),
             policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:locker"), ps,
-                Resolver.resolveAbsolute("org.jgroups:jgroups:2.12.1.Final"), ps,
-                Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-                Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
-                Resolver.resolveAbsolute("net.jini:jsk-platform")
-
+            Booter.resolveClasspath(new String[] {
+                "org.sorcersoft.sorcer:locker",
+                "org.jgroups:jgroups:2.12.1.Final",
+                "org.dancres.blitz:blitzui",
+                "org.apache.river:outrigger-dl",
+                "net.jini:jsk-platform"
             }),
             "org.dancres.blitz.jini.lockmgr.ServerImpl",
-             new String[] { home + "${/}configs${/}blitz${/}configs${/}lockmgr.config" })
+            home + "/configs/blitz/configs/lockmgr.config"
+		)
     };
 }
-     
