--- a/configs/shell/configs/nsh-init.config
+++ b/configs/shell/configs/nsh-init.config
@@ -5,7 +5,6 @@
 import net.jini.core.discovery.LookupLocator;
 import javax.security.auth.login.LoginContext;
 import sorcer.core.SorcerEnv;
-import sorcer.resolver.Resolver;
 
 sorcer.tools.shell.NetworkShell {
 
@@ -24,7 +23,7 @@ sorcer.tools.shell.NetworkShell {
 	
 	// webster root directories (codebase)
 	dataPath 	    = home + "${/}data";
-	httpRoots = new String[] { Resolver.getRootDir(), Resolver.getRepoDir(), dataPath };
+	httpRoots = new String[] { SorcerEnv.getRepoDir(), dataPath };
 	
 	// exported classes for examples 
 	httpJars = new String[] { "" };
@@ -39,10 +38,7 @@ sorcer.tools.shell.NetworkShell {
 	
 	// application name/startupFile pairs for non-interactive shells, e.g., nsh --browser
 	applications = new String[] { 
-		"browser",  home + "${/}bin${/}browser${/}bin${/}service-browser-run.xml",
-		"f1",  home + "${/}modules${/}examples${/}ex6${/}bin${/}f1-req-run.xml",
-		"f5",  home + "${/}modules${/}examples${/}ex6${/}bin${/}f5-req-run.xml",
-		"f5a", home + "${/}modules${/}examples${/}bin${/}f5a-req-run.xml"
-		};
+		"browser",  home + "bin/sorcer-browser.xml"
+	};
 
 }
