--- a/configs/sos-providers/cataloger.config
+++ b/configs/sos-providers/cataloger.config
@@ -1,9 +1,13 @@
+import java.net.URL;
 import net.jini.jrmp.*;
 import net.jini.jeri.*;
 import net.jini.jeri.tcp.*;
 import net.jini.core.entry.*;
 import net.jini.lookup.entry.*;
 import sorcer.core.*;
+import sorcer.resolver.Resolver;
+import sorcer.util.Artifact;
+import sorcer.ui.serviceui.*;
 
 sorcer.core.provider.ServiceProvider  {
 		name = "Cataloger";
@@ -11,8 +15,19 @@ sorcer.core.provider.ServiceProvider  {
 		description = "Dynamic catalog of SORCER service providers";
 		location = "Sorcersoft.com Lab";
 		spaceEnabled = false;
+		uiUrl = Resolver.resolveAbsoluteURL(new URL(SorcerEnv.getWebsterUrl()), Artifact.sorcer("cataloger-sui"));
+		helpUrl = new URL(SorcerEnv.getWebsterUrl() + "/deploy/cataloger.html");
 		entries = new Entry[] {
-			sorcer.core.provider.cataloger.ui.CatalogerUIFactory.getMainUIDescriptor(),
+			// URL exportUrl, String className, String name, String helpFilename
+			UIDescriptorFactory.getUIDescriptor(
+				net.jini.lookup.ui.MainUI.ROLE,
+				new UIFrameFactory(
+					new URL[]{uiUrl},
+					"sorcer.core.provider.cataloger.ui.CatalogerUI",
+					"Catalog Browser",
+					helpUrl
+				)
+			),
 			new Comment("Welcome to exertion-oriented programming!"), 
 			new Location("", "", "Sorcersoft.com") };
 
