--- a/configs/startup-boot-prv.config
+++ b/configs/startup-boot-prv.config
@@ -7,14 +7,9 @@ import sorcer.provider.boot.SorcerDescriptorUtil;
 import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.core.SorcerEnv;
-import sorcer.resolver.Resolver;
 
 com.sun.jini.start {
  	home = "${sorcer.home}";
-	// webster root directories
-	deployPath 	= home + "${/}deploy";
-	rootDir = Resolver.getRootDir();
-	repoDir = Resolver.getRepoDir();
 
 	//port = Booter.getWebsterPort(); 
 	port = 0;
@@ -31,15 +26,16 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-        SorcerDescriptorUtil.getWebster(policy, port,
-                                         new String[] { 
-                                                        repoDir,
-                                                        deployPath,
-                                                        rootDir }),
+        SorcerDescriptorUtil.getWebster(policy, port, Booter.getWebsterRoots()),
     
-       /* Provider descriptor */
-       //String codebase, String policy, String classpath, String implClassName, String... serverConfigArgs)
-       new SorcerServiceDescriptor(providerCodebaseJars, policy,
-				providerClasspath, implClass, providerConfig)
+		/* Provider descriptor */
+		//String codebase, String policy, String classpath, String implClassName, String... serverConfigArgs)
+		new SorcerServiceDescriptor(
+			providerCodebaseJars,
+			policy,
+			providerClasspath,
+		    implClass,
+		    providerConfig
+		)
     };
 }//end com.sun.jini.start
