--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -2,16 +2,12 @@ import java.net.URL;
 import sorcer.provider.boot.Booter;
 
 import sorcer.core.SorcerEnv;
-import sorcer.resolver.Resolver;
 
 
 
 sorcer.tools.codeserver {
 
     home = "${sorcer.home}";
-    rootDir = Resolver.getRootDir() + "/";
-    repoDir = Resolver.getRepoDir() + "/";
-    deployPath 		 = home + "${/}deploy";
 
     // for compatibility with old sorcer distro
     sorcerLibPath 	 = home + "${/}lib${/}sorcer";
@@ -31,16 +27,13 @@ sorcer.tools.codeserver {
     endPort = Booter.getWebsterEndPort();
     isDaemon = false;
     
-    roots = new String[] {
-      rootDir,
-      repoDir,
-      deployPath,
-      sorcerLibPath,
-      jiniLibPath,
-      jiniLookupLibPath,
-      riverLibPath,
-      commonsLibPath
-    };
+    roots = Booter.getWebsterRoots(new String[] {
+		sorcerLibPath,
+		jiniLibPath,
+		jiniLookupLibPath,
+		riverLibPath,
+		commonsLibPath
+    });
     
     options = new String[] { "-port", "" + websterPort, 
 	    "-bindAddress", websterAddress, 
