--- a/examples/ex1/run-prv/configs/start-services.config
+++ b/examples/ex1/run-prv/configs/start-services.config
@@ -5,7 +5,6 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.core.SorcerEnv;
-import sorcer.resolver.Resolver;
 
 com.sun.jini.start {
 	home = "${sorcer.home}";
@@ -18,29 +17,31 @@ com.sun.jini.start {
         SorcerDescriptorUtil.getWebster(policy),
 
         new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex1-api")
- 			//+" "+Resolver.resolveRelative("net.jini.lookup:serviceui")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+        	Booter.resolveCodebase(new String[]{
+        		"org.sorcersoft.sorcer:ex1-api",
+        		"org.sorcersoft.sorcer:sos-platform"
+        	}),
             policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-api"), ps,
-            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-prv"), ps
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:ex1-api",
+            	"org.sorcersoft.sorcer:ex1-prv"
             }),
 	        "sorcer.ex1.provider.WhoIsItProvider1",
-          	new String[] { home + "/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt1-prv.config" }
+          	home + "/examples/ex1/ex1-cfg1/src/main/resources/whoIsIt1-prv.config"
         ),
 
         new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex1-api")
- 			//+" "+Resolver.resolveRelative("net.jini.lookup:serviceui")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+        	Booter.resolveCodebase(new String[]{
+				"org.sorcersoft.sorcer:ex1-api",
+				"org.sorcersoft.sorcer:sos-platform"
+ 			}),
             policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-api"), ps,
-            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-prv"), ps
+            Booter.resolveClasspath(new String[] {
+                "org.sorcersoft.sorcer:ex1-api",
+            	"org.sorcersoft.sorcer:ex1-prv"
             }),
             "sorcer.ex1.provider.WhoIsItProvider2",
-          	new String[] { home + "/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt2-prv.config" }
+          	home + "/examples/ex1/ex1-cfg2/src/main/resources/whoIsIt2-prv.config"
         )
     };
 }
