--- a/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-all-prvs.config
@@ -3,14 +3,13 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.core.SorcerEnv;
-import sorcer.resolver.Resolver;
 
 com.sun.jini.start {
 	policy = "${java.security.policy}";
 
 	serviceDescriptors = new ServiceDescriptor[] {
 
-	    SorcerDescriptorUtil.getWebster(policy, 0, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
+	    SorcerDescriptorUtil.getWebster(policy, 0, Booter.getWebsterRoots()),
 
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
@@ -23,7 +22,7 @@ com.sun.jini.start {
 				"org.sorcersoft.sorcer:ex6-prv"
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src/main/resources/config/adder-prv.config" }
+			"src/main/resources/config/adder-prv.config"
 		),
 
 		new SorcerServiceDescriptor(
@@ -37,7 +36,7 @@ com.sun.jini.start {
 				"org.sorcersoft.sorcer:ex6-prv"
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src/main/resources/config/multiplier-prv.config" }
+			"src/main/resources/config/multiplier-prv.config"
 		),
 
 		new SorcerServiceDescriptor(
@@ -51,7 +50,7 @@ com.sun.jini.start {
 				"org.sorcersoft.sorcer:ex6-prv"
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src/main/resources/config/divider-prv.config" }
+			"src/main/resources/config/divider-prv.config"
 		),
 
 		new SorcerServiceDescriptor(
@@ -65,7 +64,7 @@ com.sun.jini.start {
 				"org.sorcersoft.sorcer:ex6-prv"
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src/main/resources/config/subtractor-prv.config" }
+			"src/main/resources/config/subtractor-prv.config"
 		)
 	};
 }
