--- a/sos-providers/jobber/jobber-prv/src/main/resources/config/services.config
+++ b/sos-providers/jobber/jobber-prv/src/main/resources/config/services.config
@@ -4,15 +4,12 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-
-import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 
 com.sun.jini.start {
     home = "${sorcer.home}";
     policy = "${java.security.policy}";
-    ps = System.getProperty("path.separator");
-     
+
     //port = Booter.getWebsterPort();
     port = 0;
     //address = Booter.getWebsterInterface();
@@ -32,7 +29,7 @@ com.sun.jini.start {
    			policy,
             Booter.resolveClasspath("org.sorcersoft.sorcer:sos-webster"),
 			"sorcer.tools.webster.Webster", 
-			new String[] { home + "/configs/webster/configs/webster-prv.config" }
+			home + "/configs/webster/configs/webster-prv.config"
         ),*/
 
         // SORCER Jobber Service
@@ -44,7 +41,7 @@ com.sun.jini.start {
                 "org.sorcersoft.sorcer:jobber-prv"
             }),
             "sorcer.core.provider.jobber.ServiceJobber",
-            new String[]{ home + "/configs/sos-providers/jobber.config" }
+            home + "/configs/sos-providers/jobber.config"
         )
     };
 }
