--- a/configs/webster/configs/start-webster-prv.config
+++ b/configs/webster/configs/start-webster-prv.config
@@ -5,10 +5,9 @@
 import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import com.sun.jini.config.ConfigUtil;
-import java.io.File;
-import sorcer.resolver.Resolver;
 
 import sorcer.provider.boot.SorcerDescriptorUtil;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.start {
  			
@@ -16,9 +15,10 @@ com.sun.jini.start {
     	/* Wester descriptor */
    		new SorcerServiceDescriptor(null, 
    			"${java.security.policy}",
-			Resolver.resolveAbsolute("org.sorcersoft.sorcer:sos-webster"), 
+			Booter.resolveClasspath("org.sorcersoft.sorcer:sos-webster"),
 			"sorcer.tools.webster.Webster", 
-			new String[] { "${sorcer.home}${/}bin${/}webster${/}configs${/}webster-prv.config" })
+			"${sorcer.home}/bin/webster/configs/webster-prv.config"
+		)
     };
     
 }//end com.sun.jini.start
