--- a/examples/ex5/ex5-prv/src/main/resources/config/start-all-beans.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/start-all-beans.config
@@ -4,7 +4,6 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 	
 com.sun.jini.start {
@@ -18,15 +17,17 @@ com.sun.jini.start {
 
 
         new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex5-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sorcer-api"),
+            Booter.resolveCodebase(new String[]{
+	 			"org.sorcersoft.sorcer:ex5-api",
+ 				"org.sorcersoft.sorcer:sorcer-api"
+			}),
             policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-api"), ps,
-            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-prv"), ps
+            Booter.resolveClasspath(new String[] {
+                "org.sorcersoft.sorcer:ex5-api",
+            	"org.sorcersoft.sorcer:ex5-prv"
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}config${/}arithmetic-bean.config" }
+          	"src/main/resources/config/arithmetic-bean.config"
         )
     };
 }
