--- a/examples/ex6/ex6-prv/src/main/resources/config/arithmetic-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/arithmetic-bean.config
@@ -4,6 +4,7 @@
 * as defined by sorcer.core.provider.SorcerProvider.
 */
 import java.util.logging.*;
+import java.net.URL;
 import net.jini.jrmp.*;
 import net.jini.jeri.*;
 import net.jini.jeri.tcp.*;
@@ -12,6 +13,9 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
 import sorcer.arithmetic.provider.*;
+import sorcer.resolver.Resolver;
+import sorcer.util.Artifact;
+import sorcer.ui.serviceui.*;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
@@ -28,7 +32,15 @@ sorcer.core.provider.ServiceProvider {
 
 		// add service UI
         entries = new Entry[] {
-            ArithmeticImpl.getCalculatorDescriptor(),
+            UIDescriptorFactory.getUIDescriptor(
+            	net.jini.lookup.ui.MainUI.ROLE,
+				new UIComponentFactory(
+					new URL[]{
+						new URL(SorcerEnv.getWebsterUrl() + "/" + Resolver.resolveRelative(Artifact.sorcer("ex6-sui")) + "/calculator-ui.jar")
+					},
+					"sorcer.arithmetic.provider.ui.CalculatorUI"
+				)
+			),
             new Comment("It uses sorcer.arithmetic.Arithmometer for bean implementation") };
 
 		// remote logging
