--- a/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
@@ -4,30 +4,30 @@ import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
-import sorcer.resolver.Resolver;
 import sorcer.core.SorcerEnv;
 	
 com.sun.jini.start {
 	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
-	ps = System.getProperty("path.separator");
 	
     serviceDescriptors = new ServiceDescriptor[] {
 
-        SorcerDescriptorUtil.getWebster(policy, 0, new String[] { Resolver.getRootDir(), Resolver.getRepoDir() }),
+        SorcerDescriptorUtil.getWebster(policy, 0, Booter.getWebsterRoots()),
 
         new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-sui")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sorcer-api"),
+			Booter.resolveCodebase(new String[] {
+ 				"org.sorcersoft.sorcer:ex6-api",
+ 				"org.sorcersoft.sorcer:ex6-sui",
+ 				"org.sorcersoft.sorcer:sorcer-api"
+			}),
             policy,
-            ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-api"), ps,
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-sui"), ps,
-            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
+            Booter.resolveClasspath(new String[] {
+                "org.sorcersoft.sorcer:ex6-api",
+                "org.sorcersoft.sorcer:ex6-sui",
+            	"org.sorcersoft.sorcer:ex6-prv"
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}config${/}arithmetic-bean.config" }
+          	"src/main/resources/config/arithmetic-bean.config"
         )
     };
 }
