--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -14,10 +14,6 @@
     <description>SORCER</description>
     <url>http://sorcersoft.org/</url>
 
-    <properties>
-        <config>${env.SORCER_HOME}/configs/boot-sorcer-min.config</config>
-    </properties>
-
     <dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
@@ -28,6 +24,12 @@
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sorcer-resolver</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-rio-lib</artifactId>
+			<version>${project.version}</version>
+            <scope>runtime</scope>
 		</dependency>
 		<dependency>
             <groupId>org.apache.river</groupId>
@@ -49,26 +51,13 @@
             <version>${v.rio}</version>
         </dependency>
 
-<!--
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-        </dependency>
--->
         <dependency>
             <groupId>org.rioproject.resolver</groupId>
             <artifactId>resolver-aether</artifactId>
             <version>${v.rio}</version>
             <scope>runtime</scope>
         </dependency>
-<!--
-		<dependency>
-			<groupId>net.jini.lookup</groupId>
-			<artifactId>serviceui</artifactId>
-			<version>${v.jini}</version>
-			<scope>runtime</scope>
-		</dependency>
--->
+
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
