extend launcher with booting sorcer in the same as JVM - WIP; ServiceStarter: add some support for starting from the launcher, don't try to stop failed services

--- a/tools/sorcer-launcher/pom.xml
+++ b/tools/sorcer-launcher/pom.xml
@@ -38,6 +38,13 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- required for in-process launch -->
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-boot</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
