--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -51,12 +51,14 @@
             <version>${v.rio}</version>
         </dependency>
 
+<!--
         <dependency>
             <groupId>org.rioproject.resolver</groupId>
             <artifactId>resolver-aether</artifactId>
             <version>${v.rio}</version>
             <scope>runtime</scope>
         </dependency>
+-->
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -77,6 +79,23 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+
+        <!-- groovy platform files -->
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-rio-start</artifactId>
+            <version>${v.sorcer}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- required by configs of services with UI -->
+        <dependency>
+            <groupId>net.jini.lookup</groupId>
+            <artifactId>serviceui</artifactId>
+            <version>${v.jini}</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!--ServiceStarter, Installer-->
 		<dependency>
 			<groupId>commons-io</groupId>
