--- a/sos-providers/dbp/dbp-req/pom.xml
+++ b/sos-providers/dbp/dbp-req/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>dbp</artifactId>
-        <version>1.0-M3-SNAPSHOT</version>
+        <version>1.0-M4-SNAPSHOT</version>
     </parent>
 
     <artifactId>dbp-req</artifactId>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.0.11</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
