DatabaseProvider: call setupDatabase in init; fix configuration; DatabaseProviderTest: fix environment, add logging; common-run, Launcher: add sos-platform back to boot CP, required for sos: protocol to work; common-run.xml: add logback conf where missing;

--- a/sos-providers/dbp/dbp-req/pom.xml
+++ b/sos-providers/dbp/dbp-req/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>logback-classic</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${v.slf4j}</version>
+        </dependency>
     </dependencies>
 
 
