--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -28,7 +28,8 @@
 		<module>dependencies</module>
         <module>sorcer-resolver</module>
         <module>sorcer-pkg</module>
-	</modules>
+        <module>sorcer-junit</module>
+    </modules>
 	<build>
 <!--	<plugins>
 	    <plugin>
