--- a/sos-providers/dbp/dbp-prv/pom.xml
+++ b/sos-providers/dbp/dbp-prv/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>dbp-prv</artifactId>
-    <name>SORCER OS :: providers :: dbp :: prv</name>
+    <name>SORCER OS :: providers :: dbp :: provider</name>
 
     <dependencies>
         <dependency>
@@ -28,6 +28,64 @@
             <artifactId>je</artifactId>
             <version>${v.sleepycat}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${v.slf4j}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-junit</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
+
+    <profiles>
+        <profile>
+            <id>run-its</id>
+            <properties>
+                <run-its>true</run-its>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <groups>sorcer.util.junit.SorcerClient</groups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>dont-run-its</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>run-its</name>
+                    <value/>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludedGroups>sorcer.util.junit.SorcerClient</excludedGroups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
