--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -19,7 +19,9 @@
 		<module>sos-boot</module>
         <module>sos-netlet</module>
 		<module>sos-shell</module>
+        <module>sos-start</module>
 		<module>browser</module>
+        <module>sorcer-installer</module>
         <module>sorcer-launcher</module>
 		<module>sorcer-maven-plugin</module>
 		<module>sorcer-provider</module>
@@ -30,23 +32,4 @@
         <module>sorcer-pkg</module>
         <module>sorcer-junit</module>
     </modules>
-	<build>
-<!--	<plugins>
-	    <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-jar-plugin</artifactId>
-		<configuration>
-		    <archive>
-			<manifest>
-			    <addClasspath>true</addClasspath>
-			    <addExtensions>false</addExtensions>
-			    <classpathPrefix></classpathPrefix>
-			    <classpathLayoutType>custom</classpathLayoutType>
-			    <customClasspathLayout>${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
-			</manifest>
-		    </archive>
-		</configuration>
-	    </plugin>
-	  </plugins>-->
-	</build>
 </project>
