--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -17,6 +17,11 @@
         <!-- sos -->
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-start</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-req</artifactId>
             <version>${project.version}</version>
         </dependency>
