--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
 				<version>${v.jini}</version>
 			</dependency>
 			<dependency>
+				<groupId>net.jini.lookup</groupId>
+				<artifactId>jmx-lookup</artifactId>
+				<version>${v.jini}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sos-api</artifactId>
 				<version>${project.version}</version>
