--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -23,21 +23,44 @@
 		<module>ex6</module>
     </modules>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.14.1</version>
-					<configuration>
-						<systemPropertyVariables>
-							<RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME>
-							<buildDirectory>${project.build.directory}</buildDirectory>
-						</systemPropertyVariables>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+    <profiles>
+        <profile>
+            <id>run-its</id>
+            <properties>
+                <run-its>true</run-its>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <groups>sorcer.util.junit.SorcerClient</groups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>dont-run-its</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>run-its</name>
+                    <value/>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludedGroups>sorcer.util.junit.SorcerClient</excludedGroups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
