add timeout to junit runner; add plexus to Launcher cp; remove logging from SorcerLauncher

--- a/tools/sorcer-junit/pom.xml
+++ b/tools/sorcer-junit/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>jul-to-slf4j</artifactId>
             <version>${v.slf4j}</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
