--- a/examples/ex6/ex6-cfg-all/src/main/resources/beans-prv.config
+++ b/examples/ex6/ex6-cfg-all/src/main/resources/beans-prv.config
@@ -24,6 +24,7 @@ sorcer.core.provider.ServiceProvider {
 		description = "Arithmetic beans provider";
 		location = "OTM2010";
 		publishedInterfaces = new Class[] { 
+			sorcer.arithmetic.provider.Arithmetic.class,
 			sorcer.arithmetic.provider.Adder.class,
 			sorcer.arithmetic.provider.Multiplier.class,
 			sorcer.arithmetic.provider.Subtractor.class,
@@ -52,10 +53,13 @@ sorcer.core.provider.ServiceProvider {
 		remoteProviderLogging = true;
 		
 		// service beans	
-		beanClasses = new Class[] { sorcer.arithmetic.provider.AdderImpl.class, 
+		beanClasses = new Class[] {
+			sorcer.arithmetic.provider.ArithmeticImpl.class,
+		 	sorcer.arithmetic.provider.AdderImpl.class,
 			sorcer.arithmetic.provider.SubtractorImpl.class, 
 			sorcer.arithmetic.provider.MultiplierImpl.class, 
-			sorcer.arithmetic.provider.DividerImpl.class }; 
+			sorcer.arithmetic.provider.DividerImpl.class
+		};
 		
 		//dataContext management for this provider
 		contextManager=new ContextManager();
