--- a/sos/sos-launch/sorcer-launcher-base/pom.xml
+++ b/sos/sos-launch/sorcer-launcher-base/pom.xml
@@ -21,41 +21,24 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>tools</artifactId>
+        <artifactId>sos-launch</artifactId>
         <version>1.0-M4-SNAPSHOT</version>
     </parent>
-    <artifactId>sos-start</artifactId>
-    <name>SORCER Tools :: start</name>
+    <artifactId>sorcer-launcher-base</artifactId>
+    <name>SORCER Launch :: Base</name>
 
     <dependencies>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-launcher</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-util</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${v.slf4j}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-resolver</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+
 </project>
