--- a/sos/sos-launch/sos-start/pom.xml
+++ b/sos/sos-launch/sos-start/pom.xml
@@ -21,21 +21,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>tools</artifactId>
+        <artifactId>sos-launch</artifactId>
         <version>1.0-M4-SNAPSHOT</version>
     </parent>
-    <artifactId>sorcer-junit</artifactId>
-    <name>SORCER tools :: JUnit</name>
+    <artifactId>sos-start</artifactId>
+    <name>SORCER Launch :: Main</name>
 
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-resolver</artifactId>
+            <artifactId>sorcer-launcher</artifactId>
             <version>${project.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>commons-req</artifactId>
+            <artifactId>sorcer-launcher-base</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -44,24 +45,24 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.rioproject</groupId>
-            <artifactId>rio-start</artifactId>
-            <version>${v.rio}</version>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>compile</scope>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>jul-to-slf4j</artifactId>
-            <version>${v.slf4j}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
-
 </project>
