--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -27,6 +27,16 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-launcher-base</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-installer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sorcer-rio-lib</artifactId>
 			<version>${project.version}</version>
             <scope>runtime</scope>
@@ -51,7 +61,12 @@
             <version>${v.rio}</version>
         </dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
