bring back ex0-req

--- a/examples/ex0/pom.xml
+++ b/examples/ex0/pom.xml
@@ -18,6 +18,7 @@
 		<module>ex0-prv</module>
 		<module>ex0-sui</module>
         <module>ex0-cfg</module>
+        <module>ex0-req</module>
 	</modules>
 
 	<dependencyManagement>
