[pom] remove references to temporally dropped maven plugin; [pom] prepare int-tests for testing with sorcer-junit refactor launch

--- a/sos/sos-launch/sorcer-launcher-base/pom.xml
+++ b/sos/sos-launch/sorcer-launcher-base/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>sorcer-resolver</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 
 
