--- a/tools/sorcer-junit/pom.xml
+++ b/tools/sorcer-junit/pom.xml
@@ -38,9 +38,16 @@
             <artifactId>commons-req</artifactId>
             <version>${project.version}</version>
         </dependency>
+<!--
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-boot</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+-->
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-launcher</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
