--- a/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt1-prv.config
+++ b/examples/ex1/ex1-cfg-all/src/main/resources/whoIsIt1-prv.config
@@ -20,6 +20,7 @@ sorcer.core.provider.ServiceProvider {
 			
 		// PULL execution related
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };	
+		beanClasses = new Class[] { sorcer.ex1.bean.WhoIsItBean2.class };
 		spaceEnabled = true;
 		interfaceOnly = false;
 		workersTransactional = false;
@@ -37,5 +38,3 @@ sorcer.core.provider.ServiceProvider {
         
         iconName="sorcer-ico-bw.png";
 }
-	
-
